[package]
name = "aoc"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
scraper = "0.21.0"
tokio = {version="1.41.1", features=["full"]}
