[package]
name = "aoc"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.10", features = ["blocking"] }
scraper = "0.21.0"
